--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,11 @@
     <title>{{ title }}</title>
 </head>
 <body>
-Я index.html
+    <div>
+        <h1>
+            Работа найдется для каждого
+        </h1>
+        <form></form>
+    </div>
 </body>
 </html>
