Создал новый темплейт для результатов поиска

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,9 @@
         <h1>
             Работа найдется для каждого
         </h1>
-        <form></form>
+        <form method="get">
+            <input name="q" type="text" placeholder="Поиск...">
+        </form>
     </div>
 </body>
 </html>
