--- a/templates/index.html
+++ b/templates/index.html
@@ -5,13 +5,33 @@
     <title>{{ title }}</title>
 </head>
 <body>
+
+
+    <header>
+        <span>
+            <a href="{% url 'index' %}">Соискателям</a>
+        </span>
+        <span>
+            <a href="{% url 'employer' %}">Работодателям</a>
+        </span>
+    </header>
+
+    <br>
+    <br>
+
     <div>
         <h1>
             Работа найдется для каждого
         </h1>
-        <form method="get">
-            <input name="q" type="text" placeholder="Поиск...">
+        <form id="searchbar" action="{% url 'search_vacancy' %}" method="get">
+            <input name="q" type="text" placeholder="Профессия, должность или компания">
         </form>
+        <br>
+        <button form="searchbar">
+            Найти работу
+        </button>
     </div>
+
+
 </body>
 </html>
