--- a/templates/employer.html
+++ b/templates/employer.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </head>
 <body>
 
@@ -20,7 +22,7 @@
     <br>
 
     <div>
-        <button class="btn">Разместить вакансию</button>
+        <button>Разместить вакансию</button>
     </div>
 
     <br>
@@ -28,7 +30,7 @@
 
     <div>
         <form id="searchbar" action="{% url 'search_resume' %}">
-            <input type="text" placeholder="Поиск по резюме">
+            <input type="text" data-role="tagsinput" placeholder="Поиск по резюме">
         </form>
         <br>
         <button form="searchbar">
