--- a/templates/employer.html
+++ b/templates/employer.html
@@ -1,43 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-</head>
-<body>
+{% extends 'layout.html' %}
 
 
-    <header>
-        <span>
-            <a href="{% url 'index' %}">Соискателям</a>
-        </span>
-        <span>
-            <a href="{% url 'employer' %}" >Работодателям</a>
-        </span>
-    </header>
+{% block content %}
+        <div>
+            <button>Разместить вакансию</button>
+        </div>
 
-    <br>
-    <br>
-
-    <div>
-        <button>Разместить вакансию</button>
-    </div>
-
-    <br>
-    <br>
-
-    <div>
-        <form id="searchbar" action="{% url 'search_resume' %}">
-            <input type="text" data-role="tagsinput" placeholder="Поиск по резюме">
-        </form>
         <br>
-        <button form="searchbar">
-            Найти сотрудника
-        </button>
-    </div>
+        <br>
+
+        <div>
+            <form id="searchbar" action="{% url 'search_resume' %}">
+                <input type="text" data-role="tagsinput" placeholder="Поиск по резюме">
+            </form>
+            <br>
+            <button form="searchbar">
+                Найти сотрудника
+            </button>
+        </div>
+{% endblock %}
 
 
-</body>
-</html>
+
+
+
