--- a/templates/index.html
+++ b/templates/index.html
@@ -1,37 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{{ title }}</title>
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" type="text/css">
-</head>
-<body>
+{% extends 'layout.html' %}
 
 
-    <header>
-        <nav class="nav">
-            <a class="nav-link" href="{% url 'index' %}">Соискателям</a>
-            <a class="nav-link" href="{% url 'employer' %}">Работодателям</a>
-        </nav>
-    </header>
-
-    <br>
-    <br>
-
+{% block content %}
     <div class="">
         <h1>
             Работа найдется для каждого
         </h1>
         <form id="searchbar" action="{% url 'search_vacancy' %}" method="get">
-            <input class="form-text" name="q" type="text" data-role="tagsinput" confirmKeys="[13, 44]" placeholder="Профессия, должность или компания">
+            <input class="form-text" name="q" type="text" data-role="tagsinput" placeholder="Профессия, должность или компания">
         </form>
         <br>
         <button form="searchbar">
             Найти работу
         </button>
     </div>
-
-
-</body>
-</html>
+{% endblock %}
