--- a/templates/search_resume_result.html
+++ b/templates/search_resume_result.html
@@ -1,17 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{{ title }}</title>
-</head>
-<body>
+{% extends 'layout.html' %}
 
-    <header>
-        <span>
-            <a href="{% url 'employer' %}">Главная</a>
-        </span>
-    </header>
 
+{% block content %}
     <h1>
         Результаты поиска
     </h1>
@@ -28,5 +18,6 @@
             </div>
         {% endfor %}
     </div>
-</body>
-</html>
+{% endblock %}
+
+
