--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,14 @@
 
 
 {% block content %}
-    <div class="">
+    <div class="container">
         <h1>
             Работа найдется для каждого
         </h1>
-        <form id="searchbar" action="{% url 'search_vacancy' %}" method="get">
+        <h2>
+            <a href="{% url 'create_resume' %}">Создать резюме</a>
+        </h2>
+        <form id="searchbar" action="#" method="get">
             <input class="form-text" name="q" type="text" data-role="tagsinput" placeholder="Профессия, должность или компания">
         </form>
         <br>
