--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,32 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" type="text/css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 
-<style>
-		body,
-		html {
-			margin: 0;
-			padding: 0;
-			height: 100%;
-			background: #7abecc !important;
-		}
-</style>
-
 <body>
-    <header>
-        <nav class="nav">
-            <a class="nav-link" href="{% url 'index' %}">Соискателям</a>
-            <a class="nav-link" href="{% url 'employer' %}">Работодателям</a>
-            <strong class="nav-link disabled">Привет, {{ request.user }}</strong>
-            <a class="nav-link" href="{% url 'logout' %}">Выйти</a>
-        </nav>
-    </header>
+
+<header class="container__header">
+    <div class="panel">
+        <div class="container">
+            <a href="{% url 'index' %}"><img class="logo" src="{% static 'img/relax.svg' %}" alt="Лого релакс"></a>
+        </div>
+    </div>
+    <div class="header">
+        <div class="container header-links">
+            <a class="links" href="{% url 'vacancies' %}" >Вакансии</a>
+            <a class="links" href="{% url 'resumes' %}">Специалисты</a>
+            {% if request.user.is_authenticated %}
+                <a class="links" href="{% url 'user_profile' request.user.id %}">Личный кабинет</a>
+                <a class="links" href="{% url 'logout' %}">Выход</a>
+            {% endif %}
+        </div>
+    </div>
+</header>
+
+<div class="container">
     {% block content %}
     {% endblock %}
+</div>
+
 </body>
 </html>
